objects/TW1_Sessao__c.object
<CustomObject>
    <fields>
        <fullName>Programacao__c</fullName>
        <label>Programação</label>
        <referenceTo>TW1_Programacao__c</referenceTo>
        <relationshipLabel>Sessões</relationshipLabel>
        <relationshipName>Sess_es</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Fim__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Inicio__c</fullName>
        <label>Data Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Horarios__c</fullName>
        <inlineHelpText>Ex.: 12:50 (LEG) / 17:50 (LEG)</inlineHelpText>
        <label>Horários</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Sala__c</fullName>
        <label>Sala</label>
        <referenceTo>TW1_Sala__c</referenceTo>
        <relationshipLabel>Sessões</relationshipLabel>
        <relationshipName>Sessoes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <formula>TW1_Sala__r.TW1_Shopping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estreia</fullName>
                </value>
                <value>
                    <fullName>Continuação</fullName>
                </value>
                <value>
                    <fullName>Encerrado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sessão</label>
    <nameField>
        <displayFormat>SES-{000000000}</displayFormat>
        <label>Código da Sessão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessões</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>